--- a/platform/dashboard.html
+++ b/platform/dashboard.html
@@ -1,44 +1,46 @@
-<div class="row">
+<div class="row dashboard">
     <div class="welcome">
-        <h1>Welcome</h1>
         <br>
-        <p>În ciuda opiniei publice, Lorem Ipsum nu e un simplu text fără sens. El îşi are rădăcinile într-o bucată a literaturii clasice latine din anul 45 î.e.n., făcând-o să aibă mai bine de 2000 ani. Profesorul universitar de latină de la colegiul Hampden-Sydney din Virginia, Richard McClintock, a căutat în bibliografie unul din cele mai rar folosite cuvinte latine "consectetur", întâlnit în pasajul Lorem Ipsum, şi căutând citate ale cuvântului respectiv în literatura clasică, a descoperit la modul cel mai sigur sursa provenienţei textului. Lorem Ipsum provine din secţiunile 1.10.32 şi 1.10.33 din "de Finibus Bonorum et Malorum" (Extremele Binelui şi ale Răului) de Cicerone, scrisă în anul 45 î.e.n. Această carte este un tratat în teoria eticii care a fost foarte popular în perioada Renasterii. Primul rând din Lorem Ipsum, "Lorem ipsum dolor sit amet...", a fost luat dintr-un rând din secţiunea 1.10.32.</p>
-        <p>Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea, când un tipograf anonim a luat o planşetă de litere şi le-a amestecat pentru a crea o carte demonstrativă pentru literele respective.</p>
-        <br>
-        <p>Există o mulţime de variaţii disponibile ale pasajelor Lorem Ipsum, dar majoritatea lor au suferit alterări într-o oarecare măsură prin infiltrare de elemente de umor, sau de cuvinte luate aleator, care nu sunt câtuşi de puţin credibile. Daca vreţi să folosiţi un pasaj de Lorem Ipsum, trebuie să vă asiguraţi că nu conţine nimic stânjenitor ascuns printre randuri. Toate generatoarele de Lorem Ipsum de pe Internet tind să repete bucăţi de text în funcţie de necesitate, astfel făcându-l pe acesta primul generator adevarat de pe Internet.</p>
-        <br>
-        <p>Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea, când un tipograf anonim a luat o planşetă de litere şi le-a amestecat pentru a crea o carte demonstrativă pentru literele respective.</p>
+        <p class="increased-font-size">Welcome to ReferralShip, a platform on which employees can use their employer's referral program, post offers and get in contact with individuals that are looking for a job, generating a win-win-win situation. Take a good look, get used to the interface and start posting/seeking job offers right now!</p>
     </div>
     <div class="span6">
         <div class="widget">
 	       <div class="widget-content">		
-               <h1>6 Columns</h1>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>	   		
+               <h2><i class="icon-list-alt"></i>&nbsp;&nbsp;Find offers</h2>
+               <p>Check out the offers list, get in touch with the author, discuss further about the vacant position, company or benefits and get your dream job. </p>	   	<button type="button" class="btn btn-warning right-display dashboard-control" data-id="offers">View all offers</button>
             </div> <!-- /widget-content -->		
 	   </div>   
     </div>
     <div class="span6">
         <div class="widget">
 	       <div class="widget-content">		
-               <h1>6 Columns</h1>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>	   		
+               <h2><i class="icon-list"></i>&nbsp;&nbsp;Create your offers</h2>
+               <p>You can access your created offers right here, create more, edit or delete the existing ones. Hit "More details" to see a preview and make sure all the informations are correct.</p>	   	<button type="button" class="btn btn-warning right-display myoffers dashboard-control" data-id="myoffers">Create offers</button>
             </div> <!-- /widget-content -->		
 	   </div>   
     </div>
     <div class="span6">
         <div class="widget">
 	       <div class="widget-content">		
-               <h1>6 Columns</h1>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>	   		
+               <h2><i class="icon-user"></i>&nbsp;&nbsp;Edit your account</h2>
+               <p>You can change your password or edit information like your name, birthday, gender, and phone number associated with your account from here. </p>	   	<button type="button" class="btn btn-warning right-display dashboard-control" data-id="account">Edit account details</button>	
             </div> <!-- /widget-content -->		
 	   </div>   
     </div>
     <div class="span6">
         <div class="widget">
 	       <div class="widget-content">		
-               <h1>6 Columns</h1>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>	   		
+               <h2><i class="icon-info-sign"></i>&nbsp;&nbsp;Find out more</h2>
+               <p>Read more information about employee referral program, the advantages, the company perspective and a lot more interesting info. </p>	   	<button type="button" class="btn btn-warning right-display dashboard-control" data-id="about">Learn more</button>	
             </div> <!-- /widget-content -->		
 	   </div>   
     </div>
 </div>
+<script>
+    $(document).ready(function(){
+            window.history.pushState('page2', 'Title', '/dashboard');
+        $(".dashboard-control").on("click", function(){
+            $("#"+$(this).attr("data-id")).trigger("click");
+        });
+    });
+</script>
