--- a/platform/offers.html
+++ b/platform/offers.html
@@ -27,6 +27,9 @@
     </div>
     <div id="allOffers" class="row">
     </div>
+    <div class="start">
+        <p class="offer-controls"><a href="javascript:;" class="disabled"><i class="icon-chevron-left"></i>&nbsp;&nbsp;Previous page</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:;">Next page&nbsp;&nbsp;<i class="icon-chevron-right"></i></a></p>
+    </div>
 </div>
 <script>
     $(document).ready(function(){
