--- a/platform/account.html
+++ b/platform/account.html
@@ -1,1 +1,58 @@
-<p>account</p>
+<div class="row">
+    <div class="start account-details row" style="width:100%">
+        <h1>Account details</h1>
+        <form id="edit-profile" class="form-horizontal">
+            <fieldset>
+
+                <div class="control-group">											
+                    <label class="control-label" for="username">Username</label>
+                    <div class="controls">
+                        <input type="text" class="span6 disabled" id="username" value="Example" disabled>
+                        <p class="help-block">Your username is for logging in and cannot be changed.</p>
+                    </div> <!-- /controls -->				
+                </div> <!-- /control-group -->
+
+
+                <div class="control-group">											
+                    <label class="control-label" for="firstname">First Name</label>
+                    <div class="controls">
+                        <input type="text" class="span6" id="firstname" value="John">
+                    </div> <!-- /controls -->				
+                </div> <!-- /control-group -->
+
+
+                <div class="control-group">											
+                    <label class="control-label" for="lastname">Last Name</label>
+                    <div class="controls">
+                        <input type="text" class="span6" id="lastname" value="Donga">
+                    </div> <!-- /controls -->				
+                </div> <!-- /control-group -->
+
+                <div class="control-group">
+                    <button type="button" class="btn btn-warning update-profile">Update profile</button>
+                </div>
+
+                <br /><br />
+
+                <div class="control-group">											
+                    <label class="control-label" for="password1">Password</label>
+                    <div class="controls">
+                        <input type="password" class="span4" id="password1" value="thisispassword">
+                    </div> <!-- /controls -->				
+                </div> <!-- /control-group -->
+
+
+                <div class="control-group">											
+                    <label class="control-label" for="password2">Confirm</label>
+                    <div class="controls">
+                        <input type="password" class="span4" id="password2" value="thisispassword">
+                    </div> <!-- /controls -->				
+                </div> <!-- /control-group -->
+                <div class="control-group">
+                    <button type="button" class="btn btn-warning change-password">Change password</button>
+                </div>
+            </fieldset>
+        </form>
+										
+    </div>
+</div>
