--- a/platform/dashboard.html
+++ b/platform/dashboard.html
@@ -1,4 +1,12 @@
 <div class="row dashboard">
+    <div class="row image-header">
+        
+<!--
+        <div class="span12 responsive-dashboard">
+            &nbsp;
+        </div>
+-->
+    </div>
     <div class="welcome">
         <br>
         <p class="increased-font-size">Welcome to ReferralShip, a platform on which employees can use their employer's referral program, post offers and get in contact with individuals that are looking for a job, generating a win-win-win situation. Take a good look, get used to the interface and start posting/seeking job offers right now!</p>
@@ -40,10 +48,3 @@
 	   </div>   
     </div>
 </div>
-<script>
-    $(document).ready(function(){
-//        $(".dashboard-control").on("click", function(){
-//            $("#"+$(this).attr("data-id")).trigger("click");
-//        });
-    });
-</script>
