--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Open+Sans'>
 
       <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/sweetalert.css">
 
   
 </head>
 
 <body>
   <div class="cont">
-  <div class="demo">
+  <div class="demo" style="">
     <div class="login">
       <div class="logo">
         <h1 style="color: #fff">Referral<span style="color: #f49542">Ship</span></h1>  
@@ -24,7 +25,7 @@
           <svg class="login__icon name svg-icon" viewBox="0 0 20 20">
             <path d="M0,20 a10,8 0 0,1 20,0z M10,0 a4,4 0 0,1 0,8 a4,4 0 0,1 0,-8" />
           </svg>
-          <input type="text" class="login__input name" id="login_username" placeholder="Username" value="bogdan.mihut@gmail.com"/>
+          <input type="text" class="login__input name" id="login_username" placeholder="Username" value="bogdan@gmail.com"/>
         </div>
         <div class="login__row">
           <svg class="login__icon pass svg-icon" viewBox="0 0 20 20">
@@ -35,7 +36,7 @@
         <div class="login_error hide">
               <p style="color:red">Something went wrong. Please try again!</p>
         </div>
-        <button type="button" class="login__submit" id="login_button">Sign in</button>
+        <button type="button" class="login__submit" id="login_button">Sign in</button><a href="javascript;:" id="login">Facebook</a>
         <p class="login__signup">Don't have an account? &nbsp;<a id="signup">Sign up</a></p>
       </div>
       <div class="signup_form hide">
@@ -78,9 +79,24 @@
     </div>
   </div>
 </div>
+  <script>
+  //Coming soon redirect
+      //window.location.replace("/coming-soon.html")
+  </script>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-  <script src="js/jquery.fblogin.js"></script>
-
+  <script src="js/flogin.js"></script>
+  <script type='text/javascript'>
+    $(function() {
+      $('#login').facebook_login({
+        appId: '1842768289336615',
+        endpoint: '/sessions/new',
+        onSuccess: function(data) {}, 
+        onError: function(data) {},
+        permissions: 'public_profile, email, user_location'
+      });
+    });
+</script>
+  <script src="js/sweetalert.min.js"></script>
   <script src="js/index.js"></script>
   <script src="js/backand.js"></script>
   <script src="js/jquery.backand.js"></script>
