--- a/platform/index.html
+++ b/platform/index.html
@@ -12,6 +12,7 @@
         rel="stylesheet">
 <link href="css/font-awesome.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
+<link rel="stylesheet" href="css/sweetalert.css">
 <link href="css/pages/dashboard.css" rel="stylesheet">
 <link href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css" rel="stylesheet">
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -23,7 +24,7 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container"> <a class="btn btn-navbar" data-toggle="collapse" data-target=".subnavbar"><span
-                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span> </a><a class="brand" href="index.html">ReferralShip </a><div class="loader hidden"></div>
+                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span> </a><a class="brand" href="index.html"><img src="img/round.png">ReferralShip </a><div class="loader hidden"></div>
       <div class="nav-collapse">
         <ul class="nav pull-right">
           <li class="dropdown"><a href="#" class="dropdown-toggle brand" data-toggle="dropdown" id="nav-username"><span id="first"></span>&nbsp;&nbsp;&nbsp;<span id="second"></span></a>
@@ -75,6 +76,7 @@
             <section id="account" src="account.html"></section>
             <section id="about" src="about.html"></section>
             <section id="offer-page" src="offer-page.html"></section>
+            <section id="offer-page-edit" src="offer-page-edit.html"></section>
         </div>
     </div>
 </div>
@@ -98,14 +100,14 @@
 ================================================== --> 
 <!-- Placed at the end of the document so the pages load faster --> 
 <script src="js/jquery-1.7.2.min.js"></script> 
-<script src="js/excanvas.min.js"></script> 
-<script src="js/chart.min.js" type="text/javascript"></script> 
+<script src="js/excanvas.min.js"></script>
 <script src="js/bootstrap.js"></script>
+<script src="js/sweetalert.min.js"></script>
 <script src="../js/backand.js"></script>
 <script src="../js/jquery.backand.js"></script>
-<script language="javascript" type="text/javascript" src="js/full-calendar/fullcalendar.min.js"></script>
 <script src="http://timeago.yarp.com/jquery.timeago.js"></script>
 <script src="js/base.js"></script> 
 <script src="js/spapp.js"></script>
+
 </body>
 </html>
