--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
           <svg class="login__icon name svg-icon" viewBox="0 0 20 20">
             <path d="M0,20 a10,8 0 0,1 20,0z M10,0 a4,4 0 0,1 0,8 a4,4 0 0,1 0,-8" />
           </svg>
-          <input type="text" class="login__input name" id="login_username" placeholder="Username" value="bogdan@gmail.com"/>
+          <input type="text" class="login__input name" id="login_username" placeholder="Username"/>
         </div>
         <div class="login__row">
           <svg class="login__icon pass svg-icon" viewBox="0 0 20 20">
             <path d="M0,20 20,20 20,8 0,8z M10,13 10,16z M4,8 a6,8 0 0,1 12,0" />
           </svg>
-          <input type="password" class="login__input pass" id="login_password" placeholder="Password" value="testuser"/>
+          <input type="password" class="login__input pass" id="login_password" placeholder="Password"/>
         </div>
         <div class="login_error hide">
               <p style="color:red">Something went wrong. Please try again!</p>
         </div>
-        <button type="button" class="login__submit" id="login_button">Sign in</button><a href="javascript;:" id="login">Facebook</a>
+        <button type="button" class="login__submit" id="login_button">Sign in</button>
         <p class="login__signup">Don't have an account? &nbsp;<a id="signup">Sign up</a></p>
       </div>
       <div class="signup_form hide">
@@ -44,31 +44,31 @@
           <svg class="login__icon name svg-icon" viewBox="0 0 20 20">
             <path d="M0,20 a10,8 0 0,1 20,0z M10,0 a4,4 0 0,1 0,8 a4,4 0 0,1 0,-8" />
           </svg>
-          <input type="text" class="login__input name" placeholder="Email" id="signup_email" value="testtest@test.com"/>
+          <input type="text" class="login__input name" placeholder="Email" id="signup_email"/>
         </div>
         <div class="login__row">
           <svg class="login__icon name svg-icon" viewBox="0 0 20 20">
             <path d="M0,20 a10,8 0 0,1 20,0z M10,0 a4,4 0 0,1 0,8 a4,4 0 0,1 0,-8" />
           </svg>
-          <input type="text" class="login__input name" placeholder="First name" id="signup_firstname" value="test"/>
+          <input type="text" class="login__input name" placeholder="First name" id="signup_firstname"/>
         </div>
         <div class="login__row">
           <svg class="login__icon name svg-icon" viewBox="0 0 20 20">
             <path d="M0,20 a10,8 0 0,1 20,0z M10,0 a4,4 0 0,1 0,8 a4,4 0 0,1 0,-8" />
           </svg>
-          <input type="text" class="login__input name" placeholder="Last name" id="signup_lastname" value="test"/>
+          <input type="text" class="login__input name" placeholder="Last name" id="signup_lastname"/>
         </div>
         <div class="login__row">
           <svg class="login__icon pass svg-icon" viewBox="0 0 20 20">
             <path d="M0,20 20,20 20,8 0,8z M10,13 10,16z M4,8 a6,8 0 0,1 12,0" />
           </svg>
-          <input type="password" class="login__input pass" placeholder="Password" id="signup_password" value="testuser"/>
+          <input type="password" class="login__input pass" placeholder="Password" id="signup_password"/>
         </div>
         <div class="login__row">
           <svg class="login__icon pass svg-icon" viewBox="0 0 20 20">
             <path d="M0,20 20,20 20,8 0,8z M10,13 10,16z M4,8 a6,8 0 0,1 12,0" />
           </svg>
-          <input type="password" class="login__input pass" placeholder="Repeat Password" id="signup_repeatpass" value="testuser"/>
+          <input type="password" class="login__input pass" placeholder="Repeat Password" id="signup_repeatpass"/>
         </div>
         <button type="button" class="login__submit" id="submit_button">Sign up</button>
         <p class="login__signup">Already have an account? &nbsp;<a id="login">Login Here</a></p>
@@ -79,10 +79,6 @@
     </div>
   </div>
 </div>
-  <script>
-  //Coming soon redirect
-      //window.location.replace("/coming-soon.html")
-  </script>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src="js/flogin.js"></script>
   <script type='text/javascript'>
