--- a/platform/index.html
+++ b/platform/index.html
@@ -77,6 +77,7 @@
             <section id="about" src="about.html"></section>
             <section id="offer-page" src="offer-page.html"></section>
             <section id="offer-page-edit" src="offer-page-edit.html"></section>
+            <section id="offer-page-create" src="offer-page-create.html"></section>
         </div>
     </div>
 </div>
@@ -101,6 +102,7 @@
 <!-- Placed at the end of the document so the pages load faster --> 
 <script src="js/jquery-1.7.2.min.js"></script> 
 <script src="js/excanvas.min.js"></script>
+<script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/sweetalert.min.js"></script>
 <script src="../js/backand.js"></script>
