--- a/platform/offer-page.html
+++ b/platform/offer-page.html
@@ -50,21 +50,29 @@
                 function(data){
                     myRecord = data;
                     
+                    if(typeof myRecord[0] == 'undefined'){
+                        window.location.replace('/404');
+                    }
+                    
                     if(myRecord[0].deletedAt){
                         window.location.replace('/404');
                     }
                     else{
-                        $("#offer").append("<div class='span12'><p><i class='icon-time'></i>&nbsp;<span class='timeago'>"+$.timeago(myRecord[0].dateCreated)+"</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Author: "+myRecord[0].author+"</p><h1>"+myRecord[0].title+"</h1><p>"+myRecord[0].content+"</p><h4><b>Company: </b>"+myRecord[0].company+"</h4><h4><b>Location: </b>"+myRecord[0].city+", "+myRecord[0].country+"</h4></div>");
+                        var date = new Date(myRecord[0].dateCreated);
+                        $("#offer").append("<div class='span12'><p><i class='icon-time'></i>&nbsp;<span class='timeago'>"+$.timeago(date)+"</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Author: "+myRecord[0].author+"</p><h1>"+myRecord[0].title+"</h1><p>"+myRecord[0].content+"</p><h4><b>Company: </b>"+myRecord[0].company+"</h4><h4><b>Location: </b>"+myRecord[0].city+", "+myRecord[0].country+"</h4></div>");
                     }
                 });
                 ajaxGetCall('https://api.backand.com/1/objects/action/ReferOffer/'+parseInt(params)+'?name=allowEdit&parameters=%7B%22operationKey%22:%22'+oKey+'%22%7D',
                 function(error){alert(JSON.stringify(error))}, 
                 function(data){
                     if(data){
-                        $(".offer-page-control").html('<button type="button" class="btn btn-warning">Edit&nbsp;&nbsp;<i class="icon-edit"></i></button>&nbsp;&nbsp;&nbsp;<button type="button" class="btn btn-danger delete-offer">Delete&nbsp;&nbsp;<i class="icon-ban-circle"></i></button>');
+                        $(".offer-page-control").html('<button type="button" class="btn btn-warning edit-offer">Edit&nbsp;&nbsp;<i class="icon-edit"></i></button>&nbsp;&nbsp;&nbsp;<button type="button" class="btn btn-danger delete-offer">Delete&nbsp;&nbsp;<i class="icon-ban-circle"></i></button>');
                         $(".interested-message").hide();
+                        $(".edit-offer").on("click", function(){
+                            window.location.replace('/platform/#offer-page-edit:'+parseInt(params));
+                        });
                         $(".delete-offer").on("click", function(){
-                            var date = new Date()
+                            var date = new Date();
                             swal({
                               title: "Are you sure?",
                               type: "warning",
