--- a/platform/offer-page.html
+++ b/platform/offer-page.html
@@ -8,16 +8,12 @@
         <div class="interested-message">
             <p>Are you interested in this offer? Get in touch with the author:</p>
     
-            <div class="message-form">
-                <div class="form-group">
-                  <label for="subject">Subject:</label>
-                  <input type="text" class="form-control span3" id="subject">
-                </div>
-                <div class="form-group">
+            <div class="message-form row">
+                <div class="form-group span7">
                   <label for="comment">Message:</label>
                   <textarea class="form-control span6" rows="5" id="comment" placeholder="Your message..."></textarea>
                 </div>
-                <div class="form-group">
+                <div class="form-group span12">
                     <button type="button" class="btn btn-warning send-message">Send message</button>
                 </div>
             </div>
@@ -44,6 +40,17 @@
         
         var currentUser = JSON.parse(localStorage.getItem("currentUser"));
         var oKey = JSON.parse(localStorage.getItem("currentKey"))[0].operationKey;
+        tinymce.init({  
+            selector: 'textarea',
+              height: 300,
+              menubar: false,
+              plugins: [
+                'advlist autolink lists link image charmap print preview anchor',
+                'searchreplace visualblocks code fullscreen',
+                'insertdatetime media table contextmenu paste code'
+              ],
+              toolbar: 'undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link'
+        });
         window.app.page("offer-page", function(){
             return function(params) {
                 ajaxGetCall('https://api.backand.com/1/query/data/getReferOffer?parameters=%7B%22id%22:%22'+parseInt(params)+'%22%7D', function(error){alert(JSON.stringify(error))}, 
@@ -59,7 +66,7 @@
                     }
                     else{
                         var date = new Date(myRecord[0].dateCreated);
-                        $("#offer").append("<div class='span12'><p><i class='icon-time'></i>&nbsp;<span class='timeago'>"+$.timeago(date)+"</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Author: "+myRecord[0].author+"</p><h1>"+myRecord[0].title+"</h1><p>"+myRecord[0].content+"</p><h4><b>Company: </b>"+myRecord[0].company+"</h4><h4><b>Location: </b>"+myRecord[0].city+", "+myRecord[0].country+"</h4></div>");
+                        $("#offer").append("<div class='span12'><p><i class='icon-time'></i>&nbsp;<span class='timeago'>"+$.timeago(date)+"</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Author: "+myRecord[0].author+"</p><h1>"+myRecord[0].title+"</h1><div class='job-facts row'><div class='tag span2 orange'>"+myRecord[0].procent+"% Bonus</div><div class='tag span2'>"+myRecord[0].jobType+"</div><div class='tag span2'>"+myRecord[0].jobLevel+"</div><div class='tag span3'>"+myRecord[0].jobCategory+"</div></div><p>"+myRecord[0].content+"</p><h4><b>Company: </b>"+myRecord[0].company+"</h4><h4><b>Location: </b>"+myRecord[0].city+", "+myRecord[0].country+"</h4></div>");
                     }
                 });
                 ajaxGetCall('https://api.backand.com/1/objects/action/ReferOffer/'+parseInt(params)+'?name=allowEdit&parameters=%7B%22operationKey%22:%22'+oKey+'%22%7D',
@@ -131,7 +138,7 @@
                 }
                 )
                 $(".send-message").on("click", function(){
-                    var email = "<div style='max-width:600px'><table border='0' cellpadding='0' cellspacing='0' class='body' style='width:100%'><tr style='font-family:sans-serif'><td style='font-size:14px'></td><td class='container' style='font-size:14px'><div class='content'><span class='preheader' style='display:none'>This is preheader text. Some clients will show this text as a preview.</span><table class='main' style='width:100%'><tbody style='background:#fff'><tr style='background-color: #ec9400'><td> <p style='text-align:center'><span style='font-size:30px'><span style='color: white'>ReferralShip</span></span></p></td></tr><tr><td class='wrapper' style='padding:20px'><table border='0' cellpadding='0' cellspacing='0' style='width:100%'><tr><td style='font-size:14px'><p>"+$('#comment').val()+"</p></td></tr></table></td></tr></tbody></table> <div style='height:10px'> </div><div class='footer' style='text-align:center'><table border='0' cellpadding='0' cellspacing='0' style='width:100%'><tr style=''><td class='content-block' style='color:#999999'><span class='apple-link' style='text-align:center'><a href='http://referralship.net' style='color:#999'>Login to your account</a></span><br></td></tr><tr><td class='content-block powered-by' style='font-size:14px'>Powered by <span style='color:#999999'>Referralship</span>.</td></tr></table></div></div></td><td style='font-size:14px'></td></tr></table></div>";
+                    var email = "<div style='max-width:600px'><table border='0' cellpadding='0' cellspacing='0' class='body' style='width:100%'><tr style='font-family:sans-serif'><td style='font-size:14px'></td><td class='container' style='font-size:14px'><div class='content'><span class='preheader' style='display:none'>This is preheader text. Some clients will show this text as a preview.</span><table class='main' style='width:100%'><tbody style='background:#fff'><tr style='background-color: #ec9400'><td> <p style='text-align:center'><span style='font-size:30px'><span style='color: white'>ReferralShip</span></span></p></td></tr><tr><td class='wrapper' style='padding:20px'><table border='0' cellpadding='0' cellspacing='0' style='width:100%'><tr><td style='font-size:14px'><p>"+tinymce.activeEditor.getContent()+"</p></td></tr></table></td></tr></tbody></table> <div style='height:10px'> </div><div class='footer' style='text-align:center'><table border='0' cellpadding='0' cellspacing='0' style='width:100%'><tr style=''><td class='content-block' style='color:#999999'><span class='apple-link' style='text-align:center'><a href='http://referralship.net' style='color:#999'>Login to your account</a></span><br></td></tr><tr><td class='content-block powered-by' style='font-size:14px'>Powered by <span style='color:#999999'>Referralship</span>.</td></tr></table></div></div></td><td style='font-size:14px'></td></tr></table></div>";
                     var mailData = JSON.stringify({
                       "to": myRecord[0].author,
                       "message": encodeURI(email)
