--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src="js/flogin.js"></script>
   <script type='text/javascript'>
-    $(function() {
-      $('#login').facebook_login({
-        appId: '1842768289336615',
-        endpoint: '/sessions/new',
-        onSuccess: function(data) {}, 
-        onError: function(data) {},
-        permissions: 'public_profile, email, user_location'
-      });
-    });
+//    $(function() {
+//      $('#login').facebook_login({
+//        appId: '1842768289336615',
+//        endpoint: '/sessions/new',
+//        onSuccess: function(data) {}, 
+//        onError: function(data) {},
+//        permissions: 'public_profile, email, user_location'
+//      });
+//    });
 </script>
   <script src="js/sweetalert.min.js"></script>
   <script src="js/index.js"></script>
