--- a/platform/offer-page-edit.html
+++ b/platform/offer-page-edit.html
@@ -177,6 +177,7 @@
                             tinymce.activeEditor.setContent(myRecord[0].content);
                             $("#company").val(myRecord[0].company);
                             $("#company-website").val(myRecord[0].companyWebsite);
+                            $("#percent").val(myRecord[0].procent);
                             $("#city").val(myRecord[0].city);
                             $("#country").val(myRecord[0].country);
                             $("#jobType").val(myRecord[0].jobType)
